k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hono-api
  template:
    metadata:
      labels:
        app: hono-api
    spec:
      hostAliases:
        - ip: "172.17.0.1"
          hostnames:
            - "host.k3d.internal"
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: api-container
          image: ghcr.io/andrzey/my-api:82f72c41a42944bb6fe2bb46296cf87cdef8107a
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: hono-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
